Creada funcionalidad cierre ventana mensaje

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -70,7 +70,7 @@
         </article>
       </div>
       
-      <form action="#" id="form">
+      <form action="#" method="post" id="form">
         <fieldset>
           <legend>Formulario de contacto</legend>
           <label for="name">Nombre</label>
