--- a/css/contact.css
+++ b/css/contact.css
@@ -105,7 +105,7 @@ body {
  }
  
  .success__message-container {
-    display: block;
+    display: none;
     border: 1px solid var(--btn-bg);
     border-radius: 5px;
     background: var(--white);
