--- a/css/contact.css
+++ b/css/contact.css
@@ -232,6 +232,12 @@ body {
          display: grid;
          grid-template-columns: 1fr 1fr;
      }
+
+     .contact__section-cards-container article {
+            width: 17rem;
+            height: 12rem;
+            margin: 0 auto;
+     }
  
      form {
          width: 90%;
@@ -247,12 +253,26 @@ body {
  @media (width < 500px ) {
      .hero__section-contact h1 {
          font-size: 2rem;
-         left: calc(50% - 64.01px);
+         left: calc(50% - 105.01px);
      }
  
      .contact__section-cards-container {
          display: grid;
          grid-template-columns: 1fr;
+     }
+
+     .contact__section-cards-container article {
+        font-size: 1rem;
+        width: 15rem;
+        height: 10rem;
+     }
+
+     .contact__section-cards-container article i {
+        font-size: 1.5rem;
+     }
+
+     .contact__section-cards-container article a {
+        font-size: 1rem;
      }
  
      form {
@@ -265,6 +285,15 @@ body {
  
      form fieldset label {
          margin-left: 1rem;
+         font-size: 1rem;
+     }
+
+     form fieldset legend {
+        font-size: 1.5rem;
+     }
+
+     form fieldset textarea {
+        height: 7rem;
      }
  }
  
