--- a/css/index.css
+++ b/css/index.css
@@ -80,10 +80,11 @@ a:hover {
 
 .burger {
   margin-right: 3rem;
+  margin-bottom: 2rem;
   position: relative;
   display: block;
-  width: 35px;
-  height: 35px;
+  width: 30px;
+  height: 15px;
   cursor: pointer;
   appearance: none;
   border: none;
@@ -98,7 +99,7 @@ a:hover {
   content: '';
   display: block;
   width: 100%;
-  height: 5px;
+  height: 4px;
   background-color: black;
   margin: 6px 0;
   transition: .4s;
@@ -141,7 +142,7 @@ a:hover {
   margin: 0 auto 16px;
   padding: 12px 16px;
   color: var(--white);
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 600;
   letter-spacing: 1px;
   
@@ -245,6 +246,7 @@ header .logo:hover {
   margin: 2rem auto;
   height: 30vh;
   line-height: 2rem;
+  overflow-y: auto;
 }
 
 .hero__section {
@@ -369,20 +371,47 @@ footer p {
     text-decoration: underline var(--btn-bg);   
 }
 
+@media (width < 1000px ) {
+    .text__section p {
+      font-size: 1.2rem;
+    }
+}
+
 @media (width < 462px ) {
+    header .logo,
+    footer .logo {
+      width: 8rem;     
+    }
+
+    header .logo {
+      margin-left: 1rem;
+    }
+
     .text__section {
-      font-size: 1.1rem;
       width: 80%;
-      height: 45vh;
-      
+      height: 45vh;     
     }
 
     .hero__section-content p {
       width: 80%;
     }
+    
+    .card {
+      width: 15rem;
+      height: 20rem;
+    }
 
-    footer p{
-      font-size: 1.1rem;
+    .card p,
+    .card button,
+    .text__section p,
+    .hero__section-content p,
+    footer p,
+    footer a{
+      font-size: .8rem;
+    }
+
+    .mobile-nav a {
+      font-size: 1rem;
     }
 }
 
