Modificadas y estiladas imágenes about.html

--- a/templates/about.html
+++ b/templates/about.html
@@ -42,21 +42,19 @@
         revolucionen la industria, sino que también fomenten la sostenibilidad y
         la armonía con la naturaleza. 
       </p>
-      <img
-        class="about__image-computer"
-        src="../assets/img/about-computer.jpg"
-        alt=""
-      />
+      <div class="frame__container">
+
+        <img
+          class="about__image-computer"
+          src="../assets/img/about-computer.jpg"
+          alt=""
+        />
+      </div>
 
       <p>
         Nuestro compromiso con la excelencia nos impulsa a buscar constantemente
         la innovación. Colaboramos con reconocidos expertos en tecnología y
         medio ambiente para desarrollar soluciones que marcan la diferencia.
-        <img
-        class="about__image-enterpreneur"
-        src="../assets/img/about-enterpreneur.jpg"
-        alt=""
-      />
         
         Desde sistemas de monitoreo ambiental hasta algoritmos inteligentes para
         optimizar recursos, nuestro enfoque es claro: crear un impacto positivo
@@ -76,7 +74,14 @@
         para lograr un mundo donde la tecnología y la naturaleza converjan en
         armonía para el beneficio de todos 
       </p>
+      <div class="square__container">
 
+        <img
+        class="about__image-enterpreneur"
+        src="../assets/img/girl-476977_1920.jpg"
+        alt=""
+      />
+      </div>
      
     </section>
 
