--- a/css/about.css
+++ b/css/about.css
@@ -10,33 +10,83 @@
     gap: 2rem;
 }
 
-.about__section p:first-of-type,
-.about__section p:last-of-type {
+.about__section p:first-of-type  {
     width: 70%;
+}
+
+.about__section p:first-of-type,
+.about__section p:last-of-type {  
     text-align: justify;
     justify-self: center;
 }
 
 
 .about__section p:last-of-type {
-    width: 50%;
+    width: 90%;
+    grid-column: 2/ 3;
     
-    grid-column: 1/ 3;
-    margin: 0 0 0 10rem;
+}
+
+.square__container {
+    position: relative;
+    width: 25rem;
+    height: auto;
+    border-radius: 1rem;
+    align-self: center;
+    justify-self: center;
+    margin-bottom: 2rem;
+    grid-row: 2;
+    transform: rotate(10deg); 
+}
+
+.square__container::after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(45deg, transparent, var(--btn-bg));
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 1rem;
+    z-index: -1;
 }
 
 .about__image-enterpreneur {
+    width: 100%;
+    height: auto;
+    border-radius: 1rem;
+    transform: rotate(-10deg); 
+}
+
+.frame__container {
+    position: relative;
     width: 30rem;
-    height: 20rem;
-    border-radius: 50%;
-    float: left;
+    height: auto;
+    border-radius: 1rem;
+    align-self: center;
+    justify-self: center;
+}
+
+.frame__container::after {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 1px solid #5b43b3;
+    border-radius: 1rem;
+    z-index: 0;
 }
 
 .about__image-computer {
-    width: 40rem;
-    height: auto;
+    position: relative;
+    width: 100%;
+    height: 100%;
     border-radius: 1rem;
     align-self: self-start;
+    transform: translate(-5rem, -2rem);
+    z-index: 1;
 }
 
 @media (max-width: 1030px) {
@@ -46,6 +96,7 @@
         overflow-y: auto;
         grid-auto-flow: column;
     }
+
 
     .about__image-computer {
         width: 90%;  
