--- a/css/contact.css
+++ b/css/contact.css
@@ -18,6 +18,7 @@ body {
  
  form {
      width: 50%;
+     margin: 4rem;
      box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
      border-radius: 5px;
      font-family: 'Playfair-regular', serif;
@@ -31,13 +32,13 @@ body {
  }
  
  form fieldset legend {
-     font-size: 2rem;
+     font-size: 1.5rem;
      margin: 2rem auto;
      font-family: 'Playfair-medium-italic', serif;
  }
  
  form fieldset label {
-     font-size: 1.2rem;
+     font-size: 1rem;
      margin-left: 2.8rem;
      font-family: 'Playfair-medium-italic', serif;
  }
@@ -46,7 +47,7 @@ body {
  form fieldset select,
  form fieldset textarea {
      padding: 1rem;
-     font-size: 1rem;
+     font-size: .8rem;
      margin-bottom: 1rem;
      border: none;
      border-radius: 5px;
@@ -64,7 +65,7 @@ body {
  form fieldset select::placeholder,
  form fieldset textarea::placeholder {
      color: #423778;
-     font-size: 1rem;
+     font-size: .8rem;
  }
  
  form fieldset input:focus,
@@ -142,7 +143,7 @@ body {
  .close-btn {
     width: 5rem;
     height: auto;
-    font-size: 1.1rem;
+    font-size: .8rem;
     margin-left: 3rem;
  }
 
@@ -177,7 +178,7 @@ body {
  }
  
  .contact__section-cards-container i {
-     font-size: 2rem;
+     font-size: 1.5rem;
      margin: 1rem;
  }
  
@@ -191,7 +192,17 @@ body {
      text-decoration: none;
      color: var(--white);
      transition: var(--transition);
-     font-size: 1.2rem;
+     font-size: .8rem;
+ }
+
+ .contact__section-cards-container article h4 {
+    font-size: 1rem;
+    font-family: 'Playfair-semibold', serif;
+ }
+
+ .contact__section-cards-container article h5 {
+    font-size: .9rem;
+    font-family: 'Playfair-semibold', serif;
  }
  
  .contact__section-cards-container article a:hover {
@@ -208,7 +219,7 @@ body {
  .hero__section-contact h1 {
      position: absolute;
      color: var(--white);
-     font-size: 3rem;
+     font-size: 2rem;
      top: 50%;
      left: calc(50% - 128.01px);
      z-index: 1000;
