--- a/templates/about.html
+++ b/templates/about.html
@@ -86,22 +86,51 @@
     </section>
 
     <footer>
-      <p>&copy; 2024 | Todos los derechos reservados</p>
+      <a href="#"><img class="logo" src="assets/img/logo.svg" alt="" /></a>
       <div class="footer__content">
-        <a href="../index.html"
-          ><img class="logo" src="../assets/img/logo.svg" alt=""
-        /></a>
-        <ul>
-          <li><a href="../index.html">Inicio</a></li>
-          <li><a href="#">Acerca de</a></li>
-          <li><a href="./contact.html">Contacto</a></li>
-        </ul>
-        <div class="footer__content-socials">
-          <a class="social" href="https://www.linkedin.com/in/david-menendez-blanco-056a18252/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-          <a class="social" href="https://github.com/DavCode46" target="_blank"><i class="fa-brands fa-square-github"></i></a>
-          <a class="social" href="https://davcode.dev" target="_blank"><i class="fa-brands fa-chrome"></i></a>
+        <div class="footer__content-item">
+          <h4>Servicios</h4>
+          <ul>
+            <li><a href="#">Rutas</a></li>
+            <li><a href="#">Aventuras</a></li>
+            <li><a href="#">Deportes de riesgo</a></li>
+          </ul>
+        </div>
+        <div class="footer__content-item">
+          <h4>Sobre nosotros</h4>
+
+          <ul>
+            <li><a href="#">Nosotros</a></li>
+            <li><a href="#">Misión</a></li>
+            <li><a href="#">Visión</a></li>
+          </ul>
+        </div>
+        <div class="footer__content-item">
+          <h4>Nuestra empresa</h4>
+          <p>
+            Nuestra empresa, dedicada a la conexión con la naturaleza, se
+            esfuerza por ofrecer experiencias únicas en paseos por montañas y
+            entornos naturales. Nos enorgullece guiar a nuestros clientes a
+            través de senderos serenos, explorando la belleza virgen de la
+            naturaleza.
+          </p>
         </div>
       </div>
+      <div class="footer__content-socials">
+        <a
+          class="social"
+          href="https://www.linkedin.com/in/david-menendez-blanco-056a18252/"
+          target="_blank"
+          ><i class="fa-brands fa-linkedin"></i
+        ></a>
+        <a class="social" href="https://github.com/DavCode46" target="_blank"
+          ><i class="fa-brands fa-square-github"></i
+        ></a>
+        <a class="social" href="https://davcode.dev" target="_blank"
+          ><i class="fa-brands fa-chrome"></i
+        ></a>
+      </div>
+      <p>&copy; 2024 | Todos los derechos reservados</p>
     </footer>
 
     <script src="https://kit.fontawesome.com/c3db1c8a5f.js" crossorigin="anonymous"></script>
