Modificados estilos imágenes de las card y añadido icono scroll down en hero__section

--- a/css/index.css
+++ b/css/index.css
@@ -1,29 +1,26 @@
-@import './contact.css';
-@import './variables.css';
-@import './about.css';
+@import "./contact.css";
+@import "./variables.css";
+@import "./about.css";
 
 @font-face {
-  font-family: 'Montserrat-italic';
-  src: url('../assets/fonts/Montserrat/Montserrat-Italic.ttf');
+  font-family: "Montserrat-italic";
+  src: url("../assets/fonts/Montserrat/Montserrat-Italic.ttf");
 }
 
 @font-face {
-  font-family: 'Montserrat-regular';
-  src: url('../assets/fonts/Montserrat/Montserrat-Regular.ttf');
+  font-family: "Montserrat-regular";
+  src: url("../assets/fonts/Montserrat/Montserrat-Regular.ttf");
 }
 
 @font-face {
-  font-family: 'Playfair-regular';
-  src: url('../assets/fonts/Playfair/PlayfairDisplay-Regular.ttf');
+  font-family: "Playfair-regular";
+  src: url("../assets/fonts/Playfair/PlayfairDisplay-Regular.ttf");
 }
 
 @font-face {
-  font-family: 'Playfair-medium-italic';
-  src: url('../assets/fonts/Playfair/PlayfairDisplay-MediumItalic.ttf');
+  font-family: "Playfair-medium-italic";
+  src: url("../assets/fonts/Playfair/PlayfairDisplay-MediumItalic.ttf");
 }
-
-
-
 
 * {
   margin: 0;
@@ -39,11 +36,22 @@
 }
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
+/*   scroll-snap-type: y mandatory; */
 }
 
+
+/* header,
+.hero__section,
+.text__section,
+.card__section,
+footer {
+  scroll-snap-align: center;
+  scroll-snap-stop: always;
+} */
+
 body {
-  font-family: 'Montserrat-regular', sans-serif;
+  font-family: "Montserrat-regular", sans-serif;
   font-size: 1rem;
   background-color: var(--white);
   color: var(--light-black);
@@ -55,13 +63,12 @@ body {
 
 a:not(.social) {
   color: var(--light-black);
-  font-family: 'Montserrat-italic', sans-serif;
+  font-family: "Montserrat-italic", sans-serif;
 }
 
 a:hover {
   text-decoration: underline var(--btn-bg);
 }
-
 
 .container {
   margin-top: 2rem;
@@ -91,23 +98,22 @@ a:hover {
   border: none;
   background: none;
   outline: none;
-
 }
 
 .burger .bar,
 .burger:after,
 .burger:before {
-  content: '';
+  content: "";
   display: block;
   width: 100%;
   height: 4px;
   background-color: black;
   margin: 6px 0;
-  transition: .4s;
+  transition: 0.4s;
 }
 
 .burger.is-active:before {
-  transform: rotate(-45deg) translate(-8px, 7px);
+  transform: rotate(-45deg) translate(-8px, 6px);
 }
 
 .burger.is-active .bar {
@@ -115,7 +121,7 @@ a:hover {
 }
 
 .burger.is-active:after {
-  transform: rotate(45deg) translate(-8px, -8px);
+  transform: rotate(45deg) translate(-8px, -7px);
 }
 
 .mobile-nav {
@@ -146,29 +152,26 @@ a:hover {
   font-size: 1.5rem;
   font-weight: 600;
   letter-spacing: 1px;
-  
 }
 
 .mobile-nav a:hover {
   text-decoration: underline var(--white);
 }
 
-@media (width > 768px ) {
-    .mobile-nav {
-      display: none;
-    }
-
-    .burger {
-      display: none;
-    }   
-}
-
-@media (width <= 768px) {
-  .container nav{
+@media (width > 768px) {
+  .mobile-nav {
     display: none;
   }
 
-  
+  .burger {
+    display: none;
+  }
+}
+
+@media (width <= 768px) {
+  .container nav {
+    display: none;
+  }
 }
 
 section:not(.text__section):not(.hero__section-contact) {
@@ -196,25 +199,25 @@ header .container nav {
 
 header .logo:hover,
 footer .logo:hover {
-    transform: scale(1.1);
-    transition: var(--transition);
+  transform: scale(1.1);
+  transition: var(--transition);
 }
 
-.hero__section{
+.hero__section {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   position: relative;
   color: var(--white);
- 
+
   background-size: cover;
   overflow: hidden;
 }
 
 .hero__section {
   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)),
-  url("../assets/img/bg.webp") no-repeat;
+    url("../assets/img/bg.webp") no-repeat;
 }
 
 .hero__section::before {
@@ -232,6 +235,37 @@ footer .logo:hover {
 
 .hero__section-content {
   text-align: center;
+}
+
+.scroll__down-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.scroll__down-container a {
+  color: var(--white);
+  margin-top: -1rem;
+  font-size: 1.2rem;
+  animation: scale 1.5s infinite;
+}
+
+@keyframes scale {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.2);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+.hero__section-content .scroll__down i {
+  margin-left: 1rem;
 }
 
 .hero__section-content img {
@@ -266,7 +300,8 @@ footer .logo:hover {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   gap: 30px;
-  background: var(--light-black);
+  background: url("../assets/img/bg.png");
+  background-color: var(--light-black);
 }
 
 .card__section::before {
@@ -291,16 +326,24 @@ footer .logo:hover {
   box-shadow: var(--shadow);
   border-radius: 10px;
   color: var(--light-black);
-  margin: 5rem auto 2rem;
+  margin: 10rem auto 2rem;
+  transition: var(--transition);
+}
+
+.card:hover {
+  background: transparent;
+  color: var(--white);
+  border: 1px solid var(--btn-bg);
 }
 
 .card img {
-  width: 100%;
+  width: 90%;
   height: 100%;
   object-fit: cover;
+  transform: translate(0, -50px);
 }
 
-.card p{
+.card p {
   text-align: center;
   margin: 3rem auto;
   font-size: 1rem;
@@ -311,171 +354,175 @@ footer .logo:hover {
   position: relative;
   background-color: var(--btn-bg);
   border: none;
-  padding: .8rem;
+  padding: 0.8rem;
   border-radius: 5px;
   color: var(--white);
   cursor: pointer;
   transition: var(--transition);
   margin-bottom: 3rem;
   z-index: 2;
-  font-family: 'Playfair-regular', sans-serif;
+  font-family: "Playfair-regular", sans-serif;
 }
 
 .card button:hover,
 .close-btn:hover {
-    background-color: var(--btn-hover);
-    transform: scale(1.1);
-    
+  background-color: var(--btn-hover);
+  transform: scale(1.1);
 }
 
 .card button:active {
-    transform: translateY(5px);
+  transform: translateY(5px);
 }
- 
+
 footer {
-    min-height: 30vh;
-    background: var(--white);
+  min-height: 30vh;
+  background: var(--white);
 }
 
 footer p {
-    text-align: center;
-    margin: 3rem; 
+  text-align: center;
+  margin: 3rem;
 }
 
-
 .footer__content {
-    width: 70%; 
-    margin: 0 auto;
-    display: flex;   
-    gap: 40px;
-    justify-content: space-between;
-    align-items: center;
+  width: 70%;
+  margin: 0 auto;
+  display: flex;
+  gap: 40px;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .footer__content-item h4 {
-    text-align: left;
-    margin-bottom: 1rem;
+  text-align: left;
+  margin-bottom: 1rem;
 }
 
 .footer__content-item ul {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .footer__content-item ul li:hover {
-    transition: var(--transition);
+  transition: var(--transition);
 }
 
 .footer__content-item:last-of-type {
-    width: 40%;
-    margin-top: 3rem;
+  width: 40%;
+  margin-top: 3rem;
 }
 
 .footer__content-item:last-of-type h4 {
-    margin-bottom: -2.2rem;
-    margin-left: 3rem;
+  margin-bottom: -2.2rem;
+  margin-left: 3rem;
 }
 
-.footer__content-item:last-of-type p{
-    text-align: left;
+.footer__content-item:last-of-type p {
+  text-align: left;
 }
-
 
 .footer__content-socials {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
-.footer__content-socials i{
+.footer__content-socials i {
   font-size: 1.6rem;
   margin-left: 1rem;
   margin-bottom: 3rem;
 }
 .footer__content-socials i:hover {
-    transform: scale(1.1);
-    transition: var(--transition);
+  transform: scale(1.1);
+  transition: var(--transition);
 }
 
 @media (width <= 1024px) {
-    .card__section {
-      grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-    }
+  .card__section {
+    grid-template-columns: repeat(auto-fit, minmax(32rem, 1fr));
+  }
 
-    .card {
-      width: 30rem;
-    }
+  .card {
+    width: 30rem;
+  }
 
-    .footer__content {
-      display: grid;
-      grid-template-areas: 'item1 item2'
-                           'item3 item3';
-      margin-top: 3rem;
-      margin-left: calc(50% - 25%);
-    }
+  .card p {
+    width: 90%;
+  }
 
-    .footer__content-item:last-of-type {
-      grid-area: item3;
-      margin-top: 0;
-      margin-left: -3rem;
-      width: 100%;
-    }
+  .footer__content {
+    display: grid;
+    grid-template-areas:
+      "item1 item2"
+      "item3 item3";
+    margin-top: 3rem;
+    margin-left: calc(50% - 25%);
+  }
+
+  .footer__content-item:last-of-type {
+    grid-area: item3;
+    margin-top: 0;
+    margin-left: -3rem;
+    width: 100%;
+  }
 }
 
-@media (width < 462px ) {
-    header .logo,
-    footer .logo {
-      width: 8rem;     
-    }
+@media (width < 462px) {
+  header .logo,
+  footer .logo {
+    width: 8rem;
+  }
 
-    header .logo {
-      margin-left: 1rem;
-    }
+  header .logo {
+    margin-left: 1rem;
+  }
 
-    .text__section {
-      width: 80%;
-      height: 45vh;     
-    }
+  .text__section {
+    width: 80%;
+    height: 45vh;
+  }
 
-    .hero__section-content p {
-      width: 80%;
-    }
+  .hero__section-content img {
+    height: 4rem;
+  }
 
-    .card__section {
-      grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
-    }
+  .hero__section-content p {
+    width: 80%;
+  }
+
+  .card__section {
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  }
+
+  .card {
+    width: 17rem;
+    height: 28rem;
+  }
+
+  .card p {
+    width: 95%;
+  }
+
+  .card p,
+  .card button,
+  .text__section p,
+  .hero__section-content p,
+  footer p,
+  footer a {
+    font-size: 0.8rem;
+  }
+
  
-    .card {
-      width: 20rem;
-      height: 30rem;
-    }
 
-    .paragraph__container {
-      width: 20%;
-    }
+  .mobile-nav a {
+    font-size: 1rem;
+  }
 
-    .card p,
-    .card button,
-    .text__section p,
-    .hero__section-content p,
-    footer p,
-    footer a{
-      font-size: .8rem;
-    }
+  .footer__content {
+    margin-left: calc(50% - 30%);
+  }
 
-    .mobile-nav a {
-      font-size: 1rem;
-    }
-
-    .footer__content{
-      margin-left: calc(50% - 30%);
-    }
-
-    .footer__content-item:last-of-type {
-      width: 130%;
-    }
+  .footer__content-item:last-of-type {
+    width: 130%;
+  }
 }
-
-
-
-
