--- a/templates/about.html
+++ b/templates/about.html
@@ -86,7 +86,7 @@
     </section>
 
     <footer>
-      <a href="#"><img class="logo" src="assets/img/logo.svg" alt="" /></a>
+      <a href="#"><img class="logo" src="../assets/img/logo.svg" alt="" /></a>
       <div class="footer__content">
         <div class="footer__content-item">
           <h4>Servicios</h4>
