--- a/templates/contact.html
+++ b/templates/contact.html
@@ -117,8 +117,8 @@
         <div>
           <span><i class="fa-solid fa-check"></i></span>
           <h5>
-            Mensaje enviado correctamente, gracias por ponerte en contacto con nosotros <br>
-            Responderemos a la menor brevedad posible.
+            Hemos recibido su mensaje, responderemos a la mayor brevedad posible. <br>
+            Gracias por contactar con nosotros.
           </h5> 
 
         </div>
@@ -128,7 +128,7 @@
     </section>
 
     <footer>
-      <a href="#"><img class="logo" src="assets/img/logo.svg" alt="" /></a>
+      <a href="#"><img class="logo" src="../assets/img/logo.svg" alt="" /></a>
       <div class="footer__content">
         <div class="footer__content-item">
           <h4>Servicios</h4>
