--- a/css/contact.css
+++ b/css/contact.css
@@ -101,7 +101,7 @@ body {
  
  form div {
      margin: -2rem 0 2rem 2rem;
-     font-size: 1.2rem;
+     font-size: .9rem;
      letter-spacing: 2px;
  }
  
@@ -249,7 +249,7 @@ body {
             height: 12rem;
             margin: 0 auto;
      }
- 
+
      form {
          width: 90%;
          margin: 0 auto;
