--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,421 @@
-@import "./contact.css";
-@import "./variables.css";
-@import "./about.css";
+@font-face {
+  font-family: "Playfair-semibold";
+  src: url("../assets/fonts/Playfair/PlayfairDisplay-SemiBoldItalic.ttf");
+}
+body {
+  font-size: 1.3rem;
+}
+
+.contact__section {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #f0f1fd;
+}
+
+form {
+  width: 50%;
+  margin: 4rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+  border-radius: 5px;
+  font-family: "Playfair-regular", serif;
+}
+form fieldset {
+  display: flex;
+  flex-direction: column;
+  border: none;
+}
+form fieldset legend {
+  font-size: 1.5rem;
+  margin: 2rem auto;
+  font-family: "Playfair-medium-italic", serif;
+}
+form fieldset label {
+  font-size: 1rem;
+  margin-left: 2.8rem;
+  font-family: "Playfair-medium-italic", serif;
+}
+form fieldset input:not(.form-btn), form fieldset select {
+  padding: 1rem;
+  font-size: 0.8rem;
+  margin-bottom: 1rem;
+  border: none;
+  border-radius: 5px;
+  width: 90%;
+  margin: 0.5rem auto;
+  background: #e3e6fc;
+  color: #423778;
+}
+form fieldset textarea {
+  padding: 1rem;
+  font-size: 0.8rem;
+  margin-bottom: 1rem;
+  border: none;
+  border-radius: 5px;
+  width: 90%;
+  margin: 0.5rem auto;
+  background: #e3e6fc;
+  color: #423778;
+  resize: none;
+}
+form fieldset input::placeholder, form fieldset select::placeholder, form fieldset textarea::placeholder {
+  color: #423778;
+  font-size: 0.8rem;
+}
+form fieldset input:focus, form fieldset select:focus, form fieldset textarea:focus {
+  outline: none;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+}
+form fieldset input:focus::placeholder, form fieldset select:focus::placeholder, form fieldset textarea:focus::placeholder {
+  color: transparent;
+}
+form fieldset .form-btn {
+  border: none;
+  padding: 0.8rem;
+  background: #5b43b3;
+  border-radius: 8px;
+  color: #fff;
+  width: 30%;
+  margin-left: 2.8rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  margin-bottom: 3rem;
+}
+form fieldset .form-btn:hover {
+  background: #7761c5;
+}
+form div {
+  margin: -2rem 0 2rem 2rem;
+  font-size: 0.9rem;
+  letter-spacing: 2px;
+}
+
+.success__message-container {
+  display: none;
+  border: 1px solid #5b43b3;
+  border-radius: 5px;
+  background: #fff;
+  width: fit-content;
+  padding: 2rem;
+  margin: 0 auto;
+  position: relative;
+}
+.success__message-container > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 2rem;
+  font-family: "Playfair-semibold", serif;
+}
+.success__message-container > div p {
+  font-size: 1.2rem;
+}
+.success__message-container > div span i {
+  margin: 1rem;
+  position: relative;
+  color: green;
+  font-size: 1.7rem;
+  border: 1px solid green;
+  border-bottom: transparent;
+  border-top: transparent;
+  border-radius: 50%;
+  padding: 0.5rem;
+}
+
+.close-btn {
+  width: 5rem;
+  height: auto;
+  font-size: 0.8rem;
+  margin-left: 3rem;
+}
+
+.success__message-container h5 {
+  color: green;
+}
+
+.contact__section-cards-container {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  margin: 2rem;
+}
+.contact__section-cards-container article {
+  border: 1px solid #5b43b3;
+  background: #5b43b3;
+  text-align: center;
+  vertical-align: middle;
+  min-width: 15rem;
+  min-height: 10rem;
+  border-radius: 10px;
+  color: #fff;
+  transition: all 0.3s ease;
+  line-height: 1.75;
+}
+.contact__section-cards-container article:hover {
+  background: transparent;
+  color: rgba(0, 0, 0, 0.8);
+  filter: none;
+}
+.contact__section-cards-container i {
+  font-size: 1.5rem;
+  margin: 1rem;
+}
+.contact__section-cards-container article:hover a {
+  color: rgba(0, 0, 0, 0.8);
+}
+.contact__section-cards-container article a {
+  text-decoration: none;
+  color: #fff;
+  transition: all 0.3s ease;
+  font-size: 0.8rem;
+}
+.contact__section-cards-container article h4 {
+  font-size: 1rem;
+  font-family: "Playfair-semibold", serif;
+}
+.contact__section-cards-container article h5 {
+  font-size: 0.9rem;
+  font-family: "Playfair-semibold", serif;
+}
+.contact__section-cards-container article a:hover {
+  color: #5b43b3;
+  text-decoration: underline #5b43b3;
+}
+
+.hero__section-contact {
+  position: relative;
+  background: rgba(0, 0, 0, 0.4);
+  height: 20rem;
+}
+.hero__section-contact h1 {
+  position: absolute;
+  color: #fff;
+  font-size: 2rem;
+  top: 50%;
+  left: calc(50% - 128.01px);
+  z-index: 1000;
+}
+.hero__section-contact img:not(.contact-logo) {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  filter: brightness(50%);
+}
+
+@media (width < 1054px) {
+  .contact__section {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  .contact__section-cards-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  .contact__section-cards-container article {
+    width: 17rem;
+    height: 12rem;
+    margin: 0 auto;
+  }
+  form {
+    width: 90%;
+    margin: 0 auto;
+    margin-bottom: 2rem;
+  }
+  form fieldset .form-btn {
+    margin-top: 1rem;
+  }
+}
+@media (width < 500px) {
+  .hero__section-contact h1 {
+    font-size: 2rem;
+    left: calc(50% - 105.01px);
+  }
+  .contact__section-cards-container {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  .contact__section-cards-container article {
+    font-size: 1rem;
+    width: 15rem;
+    height: 10rem;
+  }
+  .contact__section-cards-container article i {
+    font-size: 1.5rem;
+  }
+  .contact__section-cards-container article a {
+    font-size: 1rem;
+  }
+  form {
+    margin-bottom: 1.5rem;
+  }
+  form input[type=submit] {
+    margin-left: 1rem;
+  }
+  form fieldset label {
+    margin-left: 1rem;
+    font-size: 1rem;
+  }
+  form fieldset legend {
+    font-size: 1.5rem;
+  }
+  form fieldset textarea {
+    height: 7rem;
+  }
+  .success__message-container {
+    width: 90%;
+    padding: 1rem;
+    margin: 2rem auto;
+    font-size: 0.9rem;
+  }
+  .success__message-container > div {
+    width: 90%;
+    margin-left: 1rem;
+  }
+  .success__message-container button {
+    width: 80%;
+  }
+}
+.about__section {
+  padding: 5rem;
+  background: #e3e6fc;
+  color: rgba(0, 0, 0, 0.8);
+  line-height: 1.75;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: auto auto;
+  gap: 2rem;
+}
+.about__section p:first-of-type {
+  width: 70%;
+  text-align: justify;
+  justify-self: center;
+}
+.about__section p:last-of-type {
+  text-align: justify;
+  justify-self: center;
+  width: 90%;
+  grid-column: 2/3;
+}
+
+.square__container {
+  position: relative;
+  width: 25rem;
+  height: auto;
+  border-radius: 1rem;
+  align-self: center;
+  justify-self: center;
+  margin-bottom: 2rem;
+  grid-row: 2;
+  transform: rotate(10deg);
+}
+.square__container::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(45deg, transparent, #5b43b3);
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 1rem;
+  z-index: -1;
+}
+
+.about__image-enterpreneur {
+  width: 100%;
+  height: auto;
+  border-radius: 1rem;
+  transform: rotate(-10deg);
+}
+
+.frame__container {
+  position: relative;
+  width: 30rem;
+  height: auto;
+  border-radius: 1rem;
+  align-self: center;
+  justify-self: center;
+}
+.frame__container::after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #5b43b3;
+  border-radius: 1rem;
+  z-index: 0;
+}
+
+.about__image-computer {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 1rem;
+  align-self: self-start;
+  transform: translate(-5rem, -2rem);
+  z-index: 1;
+}
+
+@media (max-width: 1030px) {
+  .about__section {
+    display: flex;
+    flex-direction: column;
+  }
+  .frame__container {
+    order: 1;
+  }
+  .about__image-computer {
+    width: 90%;
+    align-self: center;
+    justify-self: center;
+  }
+  .about__section p:first-of-type {
+    width: 90%;
+    order: 2;
+  }
+  .about__section p:nth-of-type(2) {
+    width: 100%;
+    order: 4;
+  }
+  .square__container {
+    width: 70%;
+    height: auto;
+    margin: 3rem;
+    order: 3;
+  }
+  .square__container::after {
+    width: 70%;
+  }
+  .about__image-enterpreneur {
+    margin: 1rem;
+    width: 60%;
+  }
+}
+@media (width < 500px) {
+  .square__container {
+    width: 100%;
+  }
+  .square__container::after {
+    width: 90%;
+  }
+  .about__image-computer {
+    transform: translate(-2rem, -2rem);
+    width: 100%;
+  }
+  .about__image-enterpreneur {
+    width: 90%;
+  }
+  .frame__container {
+    width: 120%;
+  }
+  .about__section p:first-of-type, .about__section p:last-of-type {
+    width: 100%;
+    font-size: 0.7rem;
+    text-align: center;
+  }
+}
 @font-face {
   font-family: "Montserrat-italic";
   src: url("../assets/fonts/Montserrat/Montserrat-Italic.ttf");
@@ -24,34 +439,40 @@
   text-decoration: none;
   box-sizing: border-box;
 }
-
-*::after,
-*::before {
+*::after, *::before {
   box-sizing: inherit;
 }
 
 html {
   scroll-behavior: smooth;
+  /*   scroll-snap-type: y mandatory; */
 }
 
+/* header,
+.hero__section,
+.text__section,
+.card__section,
+footer {
+  scroll-snap-align: center;
+  scroll-snap-stop: always;
+} */
 body {
   font-family: "Montserrat-regular", sans-serif;
   font-size: 1rem;
-  background-color: var(--white);
-  color: var(--light-black);
+  background-color: #fff;
+  color: rgba(0, 0, 0, 0.8);
 }
 
 .social {
-  color: var(--btn-bg);
+  color: #5b43b3;
 }
 
 a:not(.social) {
-  color: var(--light-black);
+  color: rgba(0, 0, 0, 0.8);
   font-family: "Montserrat-italic", sans-serif;
 }
-
 a:hover {
-  text-decoration: underline var(--btn-bg);
+  text-decoration: underline #5b43b3;
 }
 
 .container {
@@ -65,9 +486,10 @@ a:hover {
   margin: 1.5rem;
 }
 .container nav a:hover {
-  text-decoration: underline var(--btn-bg);
+  text-decoration: underline #5b43b3;
 }
-.container .burger {
+
+.burger {
   margin-right: 3rem;
   margin-bottom: 2rem;
   position: relative;
@@ -80,7 +502,7 @@ a:hover {
   background: none;
   outline: none;
 }
-.container .burger .bar, .container .burger:after, .container .burger:before {
+.burger .bar, .burger:after, .burger:before {
   content: "";
   display: block;
   width: 100%;
@@ -89,13 +511,13 @@ a:hover {
   margin: 6px 0;
   transition: 0.4s;
 }
-.container .burger.is-active:before {
+.burger.is-active:before {
   transform: rotate(-45deg) translate(-8px, 6px);
 }
-.container .burger.is-active .bar {
+.burger.is-active .bar {
   opacity: 0;
 }
-.container .burger.is-active:after {
+.burger.is-active:after {
   transform: rotate(45deg) translate(-8px, -7px);
 }
 
@@ -107,9 +529,9 @@ a:hover {
   width: 100%;
   height: 100vh;
   z-index: 98;
-  background-color: var(--btn-bg);
+  background-color: #5b43b3;
   padding-top: 120px;
-  transition: var(--transition);
+  transition: all 0.3s ease;
 }
 .mobile-nav.is-active {
   left: 0;
@@ -121,13 +543,54 @@ a:hover {
   text-align: center;
   margin: 0 auto 16px;
   padding: 12px 16px;
-  color: var(--white);
+  color: #fff;
   font-size: 1.5rem;
   font-weight: 600;
   letter-spacing: 1px;
 }
 .mobile-nav a:hover {
-  text-decoration: underline var(--white);
+  text-decoration: underline #fff;
+}
+
+@media (width > 768px) {
+  .mobile-nav, .burger {
+    display: none;
+  }
+}
+@media (width <= 768px) {
+  .container nav {
+    display: none;
+  }
+}
+section:not(.text__section):not(.hero__section-contact) {
+  min-height: 100vh;
+}
+
+header .logo, footer .logo {
+  width: 10rem;
+  height: auto;
+}
+
+header .logo {
+  margin-left: 3rem;
+}
+
+footer .logo {
+  margin-left: calc(50% - 5rem);
+  margin-top: 2rem;
+}
+
+header .container nav {
+  margin-right: 3rem;
+}
+header .logo:hover {
+  transform: scale(1.1);
+  transition: all 0.3s ease;
+}
+
+footer .logo:hover {
+  transform: scale(1.1);
+  transition: all 0.3s ease;
 }
 
 .hero__section {
@@ -136,9 +599,10 @@ a:hover {
   align-items: center;
   flex-direction: column;
   position: relative;
-  color: var(--white);
+  color: #fff;
   background-size: cover;
   overflow: hidden;
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)), url("../assets/img/bg.webp") no-repeat;
 }
 .hero__section::before {
   content: "";
@@ -147,35 +611,26 @@ a:hover {
   left: 0;
   width: 100%;
   height: 70px;
-  background: var(--white);
+  background: #fff;
   transform-origin: 0 100%;
   transform: skewY(2deg);
   z-index: 1;
 }
+
 .hero__section-content {
   text-align: center;
 }
-.hero__section-content .scroll__down-container {
+
+.scroll__down-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-.hero__section-content .scroll__down-container a {
-  color: var(--white);
+.scroll__down-container a {
+  color: #fff;
   margin-top: -1rem;
   font-size: 1.2rem;
   animation: scale 1.5s infinite;
-}
-.hero__section-content img {
-  height: 7rem;
-  margin: 3rem auto;
-  text-align: center;
-  filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.4));
-}
-.hero__section-content p {
-  text-align: center;
-  width: 60%;
-  margin: 2rem auto;
 }
 
 @keyframes scale {
@@ -189,6 +644,21 @@ a:hover {
     transform: scale(1);
   }
 }
+.hero__section-content .scroll__down i {
+  margin-left: 1rem;
+}
+.hero__section-content img {
+  height: 7rem;
+  margin: 3rem auto;
+  text-align: center;
+  filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.4));
+}
+.hero__section-content p {
+  text-align: center;
+  width: 60%;
+  margin: 2rem auto;
+}
+
 .text__section {
   text-align: center;
   width: 60%;
@@ -198,13 +668,18 @@ a:hover {
   overflow-y: auto;
 }
 
+.hero__section {
+  display: flex;
+  flex-direction: row;
+}
+
 .card__section {
   position: relative;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   gap: 30px;
   background: url("../assets/img/bg.png");
-  background-color: var(--light-black);
+  background-color: rgba(0, 0, 0, 0.8);
 }
 .card__section::before {
   content: "";
@@ -213,7 +688,7 @@ a:hover {
   left: 0;
   width: 100%;
   height: 70px;
-  background: var(--white);
+  background: #fff;
   transform-origin: 0 100%;
   transform: skewY(-2deg);
   z-index: 1;
@@ -221,20 +696,20 @@ a:hover {
 
 .card {
   flex: 1;
-  background: var(--light-bg);
+  background: #f0f1fd;
   text-align: center;
   width: 30rem;
   height: auto;
-  box-shadow: var(--shadow);
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.4);
   border-radius: 10px;
-  color: var(--light-black);
+  color: rgba(0, 0, 0, 0.8);
   margin: 10rem auto 2rem;
-  transition: var(--transition);
+  transition: all 0.3s ease;
 }
 .card:hover {
   background: transparent;
-  color: var(--white);
-  border: 1px solid var(--btn-bg);
+  color: #fff;
+  border: 1px solid #5b43b3;
 }
 .card img {
   width: 90%;
@@ -247,36 +722,53 @@ a:hover {
   margin: 3rem auto;
   font-size: 1rem;
 }
-.card button,
-.card .close-btn {
+.card button {
   position: relative;
-  background-color: var(--btn-bg);
+  background-color: #5b43b3;
   border: none;
   padding: 0.8rem;
   border-radius: 5px;
-  color: var(--white);
+  color: #fff;
   cursor: pointer;
-  transition: var(--transition);
+  transition: all 0.3s ease;
   margin-bottom: 3rem;
   z-index: 2;
   font-family: "Playfair-regular", sans-serif;
 }
-.card button:hover, .card button:active,
-.card .close-btn:hover,
-.card .close-btn:active {
-  background-color: var(--btn-hover);
+
+.close-btn {
+  position: relative;
+  background-color: #5b43b3;
+  border: none;
+  padding: 0.8rem;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  margin-bottom: 3rem;
+  z-index: 2;
+  font-family: "Playfair-regular", sans-serif;
+}
+
+.card button:hover, .close-btn:hover {
+  background-color: #7761c5;
   transform: scale(1.1);
+}
+
+.card button:active {
+  transform: translateY(5px);
 }
 
 footer {
   min-height: 30vh;
-  background: var(--white);
+  background: #fff;
 }
 footer p {
   text-align: center;
   margin: 3rem;
 }
-footer .footer__content {
+
+.footer__content {
   width: 70%;
   margin: 0 auto;
   display: flex;
@@ -284,41 +776,43 @@ footer .footer__content {
   justify-content: space-between;
   align-items: center;
 }
-footer .footer__content .footer__content-item h4 {
+
+.footer__content-item h4 {
   text-align: left;
   margin-bottom: 1rem;
 }
-footer .footer__content .footer__content-item ul {
+.footer__content-item ul {
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
-footer .footer__content .footer__content-item ul li:hover {
-  transition: var(--transition);
+.footer__content-item ul li:hover {
+  transition: all 0.3s ease;
 }
-footer .footer__content .footer__content-item:last-of-type {
+.footer__content-item:last-of-type {
   width: 40%;
   margin-top: 3rem;
 }
-footer .footer__content .footer__content-item:last-of-type h4 {
+.footer__content-item:last-of-type h4 {
   margin-bottom: -2.2rem;
   margin-left: 3rem;
 }
-footer .footer__content .footer__content-item:last-of-type p {
+.footer__content-item:last-of-type p {
   text-align: left;
 }
-footer .footer__content .footer__content-socials {
+
+.footer__content-socials {
   display: flex;
   justify-content: center;
 }
-footer .footer__content .footer__content-socials i {
+.footer__content-socials i {
   font-size: 1.6rem;
   margin-left: 1rem;
   margin-bottom: 3rem;
 }
-footer .footer__content .footer__content-socials i:hover {
+.footer__content-socials i:hover {
   transform: scale(1.1);
-  transition: var(--transition);
+  transition: all 0.3s ease;
 }
 
 @media (width <= 1024px) {
@@ -328,7 +822,7 @@ footer .footer__content .footer__content-socials i:hover {
   .card {
     width: 30rem;
   }
-  p {
+  .card p {
     width: 90%;
   }
   .footer__content {
@@ -345,8 +839,7 @@ footer .footer__content .footer__content-socials i:hover {
   }
 }
 @media (width < 462px) {
-  header .logo,
-  footer .logo {
+  header .logo, footer .logo {
     width: 8rem;
   }
   header .logo {
@@ -369,15 +862,17 @@ footer .footer__content .footer__content-socials i:hover {
     width: 17rem;
     height: 28rem;
   }
-  p {
+  .card p {
     width: 95%;
+    font-size: 0.8rem;
   }
-  p,
-  button,
-  .text__section p,
-  .hero__section-content p,
-  footer p,
-  footer a {
+  .card button {
+    font-size: 0.8rem;
+  }
+  .text__section p, .hero__section-content p {
+    font-size: 0.8rem;
+  }
+  footer p, footer a {
     font-size: 0.8rem;
   }
   .mobile-nav a {
