--- a/scss/about.scss
+++ b/scss/about.scss
@@ -1,5 +1,3 @@
-
-
 .about__section {
   padding: 5rem;
   background: #e3e6fc;
@@ -10,18 +8,19 @@
   grid-template-rows: auto auto;
   gap: 2rem;
 
-  p:first-of-type {
-    width: 70%;
-  }
+  p {
+    &:first-of-type {
+      width: 70%;
+      text-align: justify;
+      justify-self: center;
+    }
 
-  p:first-of-type, p:last-of-type {
-    text-align: justify;
-    justify-self: center;
-  }
-
-  p:last-of-type {
-    width: 90%;
-    grid-column: 2 / 3;
+    &:last-of-type {
+      text-align: justify;
+      justify-self: center;
+      width: 90%;
+      grid-column: 2/ 3;
+    }
   }
 }
 
@@ -103,14 +102,16 @@
     justify-self: center;
   }
 
-  .about__section p:first-of-type {
-    width: 90%;
-    order: 2;
-  }
+  .about__section p {
+    &:first-of-type {
+      width: 90%;
+      order: 2;
+    }
 
-  .about__section p:nth-of-type(2) {
-    width: 100%;
-    order: 4;
+    &:nth-of-type(2) {
+      width: 100%;
+      order: 4;
+    }
   }
 
   .square__container {
@@ -152,10 +153,11 @@
     width: 120%;
   }
 
-  .about__section p:first-of-type,
-  .about__section p:last-of-type {
-    width: 100%;
-    font-size: .7rem;
-    text-align: center;
+  .about__section p {
+    &:first-of-type, &:last-of-type {
+      width: 100%;
+      font-size: .7rem;
+      text-align: center;
+    }
   }
 }
