--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,6 +1,6 @@
-@import "./contact.css";
-@import "./variables.css";
-@import "./about.css";
+@import "./variables.scss";
+@import "./contact.scss";
+@import "./about.scss";
 
 @font-face {
   font-family: "Montserrat-italic";
@@ -28,36 +28,47 @@
   list-style: none;
   text-decoration: none;
   box-sizing: border-box;
-}
 
-*::after,
-*::before {
-  box-sizing: inherit;
+  &::after, &::before {
+    box-sizing: inherit;
+  }
 }
 
 html {
   scroll-behavior: smooth;
-  // scroll-snap-type: y mandatory;
+
+  /*   scroll-snap-type: y mandatory; */
 }
+
+/* header,
+.hero__section,
+.text__section,
+.card__section,
+footer {
+  scroll-snap-align: center;
+  scroll-snap-stop: always;
+} */
 
 body {
   font-family: "Montserrat-regular", sans-serif;
   font-size: 1rem;
-  background-color: var(--white);
-  color: var(--light-black);
+  background-color: $white;
+  color: $light-black;
 }
 
 .social {
-  color: var(--btn-bg);
+  color: $btn-bg;
 }
 
-a:not(.social) {
-  color: var(--light-black);
-  font-family: "Montserrat-italic", sans-serif;
-}
+a {
+  &:not(.social) {
+    color: $light-black;
+    font-family: "Montserrat-italic", sans-serif;
+  }
 
-a:hover {
-  text-decoration: underline var(--btn-bg);
+  &:hover {
+    text-decoration: underline $btn-bg;
+  }
 }
 
 .container {
@@ -66,51 +77,49 @@ a:hover {
   justify-content: space-between;
   align-items: center;
 
-  nav {
-    a {
-      font-size: 1rem;
-      margin: 1.5rem;
+  nav a {
+    font-size: 1rem;
+    margin: 1.5rem;
 
-      &:hover {
-        text-decoration: underline var(--btn-bg);
-      }
+    &:hover {
+      text-decoration: underline $btn-bg;
     }
   }
+}
 
-  .burger {
-    margin-right: 3rem;
-    margin-bottom: 2rem;
-    position: relative;
+.burger {
+  margin-right: 3rem;
+  margin-bottom: 2rem;
+  position: relative;
+  display: block;
+  width: 30px;
+  height: 15px;
+  cursor: pointer;
+  appearance: none;
+  border: none;
+  background: none;
+  outline: none;
+
+  .bar, &:after, &:before {
+    content: "";
     display: block;
-    width: 30px;
-    height: 15px;
-    cursor: pointer;
-    appearance: none;
-    border: none;
-    background: none;
-    outline: none;
+    width: 100%;
+    height: 4px;
+    background-color: black;
+    margin: 6px 0;
+    transition: 0.4s;
+  }
 
-    .bar,
-    &:after,
+  &.is-active {
     &:before {
-      content: "";
-      display: block;
-      width: 100%;
-      height: 4px;
-      background-color: black;
-      margin: 6px 0;
-      transition: 0.4s;
-    }
-
-    &.is-active:before {
       transform: rotate(-45deg) translate(-8px, 6px);
     }
 
-    &.is-active .bar {
+    .bar {
       opacity: 0;
     }
 
-    &.is-active:after {
+    &:after {
       transform: rotate(45deg) translate(-8px, -7px);
     }
   }
@@ -124,9 +133,9 @@ a:hover {
   width: 100%;
   height: 100vh;
   z-index: 98;
-  background-color: var(--btn-bg);
+  background-color: $btn-bg;
   padding-top: 120px;
-  transition: var(--transition);
+  transition: $transition;
 
   &.is-active {
     left: 0;
@@ -139,15 +148,61 @@ a:hover {
     text-align: center;
     margin: 0 auto 16px;
     padding: 12px 16px;
-    color: var(--white);
+    color: $white;
     font-size: 1.5rem;
     font-weight: 600;
     letter-spacing: 1px;
 
     &:hover {
-      text-decoration: underline var(--white);
+      text-decoration: underline $white;
     }
   }
+}
+
+@media (width > 768px) {
+  .mobile-nav, .burger {
+    display: none;
+  }
+}
+
+@media (width <= 768px) {
+  .container nav {
+    display: none;
+  }
+}
+
+section:not(.text__section):not(.hero__section-contact) {
+  min-height: 100vh;
+}
+
+header .logo, footer .logo {
+  width: 10rem;
+  height: auto;
+}
+
+header .logo {
+  margin-left: 3rem;
+}
+
+footer .logo {
+  margin-left: calc(50% - 5rem);
+  margin-top: 2rem;
+}
+
+header {
+  .container nav {
+    margin-right: 3rem;
+  }
+
+  .logo:hover {
+    transform: scale(1.1);
+    transition: $transition;
+  }
+}
+
+footer .logo:hover {
+  transform: scale(1.1);
+  transition: $transition;
 }
 
 .hero__section {
@@ -156,9 +211,10 @@ a:hover {
   align-items: center;
   flex-direction: column;
   position: relative;
-  color: var(--white);
+  color: $white;
   background-size: cover;
   overflow: hidden;
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)), url("../assets/img/bg.webp") no-repeat;
 
   &::before {
     content: "";
@@ -167,40 +223,27 @@ a:hover {
     left: 0;
     width: 100%;
     height: 70px;
-    background: var(--white);
+    background: $white;
     transform-origin: 0 100%;
     transform: skewY(2deg);
     z-index: 1;
   }
+}
 
-  &-content {
-    text-align: center;
+.hero__section-content {
+  text-align: center;
+}
 
-    .scroll__down-container {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
+.scroll__down-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
-      a {
-        color: var(--white);
-        margin-top: -1rem;
-        font-size: 1.2rem;
-        animation: scale 1.5s infinite;
-      }
-    }
-
-    img {
-      height: 7rem;
-      margin: 3rem auto;
-      text-align: center;
-      filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.4));
-    }
-
-    p {
-      text-align: center;
-      width: 60%;
-      margin: 2rem auto;
-    }
+  a {
+    color: $white;
+    margin-top: -1rem;
+    font-size: 1.2rem;
+    animation: scale 1.5s infinite;
   }
 }
 
@@ -218,6 +261,25 @@ a:hover {
   }
 }
 
+.hero__section-content {
+  .scroll__down i {
+    margin-left: 1rem;
+  }
+
+  img {
+    height: 7rem;
+    margin: 3rem auto;
+    text-align: center;
+    filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.4));
+  }
+
+  p {
+    text-align: center;
+    width: 60%;
+    margin: 2rem auto;
+  }
+}
+
 .text__section {
   text-align: center;
   width: 60%;
@@ -227,6 +289,10 @@ a:hover {
   overflow-y: auto;
 }
 
+.hero__section {
+  display: flex;
+  flex-direction: row;
+}
 
 .card__section {
   position: relative;
@@ -234,7 +300,7 @@ a:hover {
   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   gap: 30px;
   background: url("../assets/img/bg.png");
-  background-color: var(--light-black);
+  background-color: $light-black;
 
   &::before {
     content: "";
@@ -243,7 +309,7 @@ a:hover {
     left: 0;
     width: 100%;
     height: 70px;
-    background: var(--white);
+    background: $white;
     transform-origin: 0 100%;
     transform: skewY(-2deg);
     z-index: 1;
@@ -252,20 +318,20 @@ a:hover {
 
 .card {
   flex: 1;
-  background: var(--light-bg);
+  background: $light-bg;
   text-align: center;
   width: 30rem;
   height: auto;
-  box-shadow: var(--shadow);
+  box-shadow: $shadow;
   border-radius: 10px;
-  color: var(--light-black);
+  color: $light-black;
   margin: 10rem auto 2rem;
-  transition: var(--transition);
+  transition: $transition;
 
   &:hover {
     background: transparent;
-    color: var(--white);
-    border: 1px solid var(--btn-bg);
+    color: $white;
+    border: 1px solid $btn-bg;
   }
 
   img {
@@ -281,90 +347,106 @@ a:hover {
     font-size: 1rem;
   }
 
-  button,
-  .close-btn {
+  button {
     position: relative;
-    background-color: var(--btn-bg);
+    background-color: $btn-bg;
     border: none;
     padding: 0.8rem;
     border-radius: 5px;
-    color: var(--white);
+    color: $white;
     cursor: pointer;
-    transition: var(--transition);
+    transition: $transition;
     margin-bottom: 3rem;
     z-index: 2;
     font-family: "Playfair-regular", sans-serif;
-
-    &:hover,
-    &:active {
-      background-color: var(--btn-hover);
-      transform: scale(1.1);
-    }
   }
+}
+
+.close-btn {
+  position: relative;
+  background-color: $btn-bg;
+  border: none;
+  padding: 0.8rem;
+  border-radius: 5px;
+  color: $white;
+  cursor: pointer;
+  transition: $transition;
+  margin-bottom: 3rem;
+  z-index: 2;
+  font-family: "Playfair-regular", sans-serif;
+}
+
+.card button:hover, .close-btn:hover {
+  background-color: $btn-hover;
+  transform: scale(1.1);
+}
+
+.card button:active {
+  transform: translateY(5px);
 }
 
 footer {
   min-height: 30vh;
-  background: var(--white);
+  background: $white;
 
   p {
     text-align: center;
     margin: 3rem;
   }
+}
 
-  .footer__content {
-    width: 70%;
-    margin: 0 auto;
+.footer__content {
+  width: 70%;
+  margin: 0 auto;
+  display: flex;
+  gap: 40px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer__content-item {
+  h4 {
+    text-align: left;
+    margin-bottom: 1rem;
+  }
+
+  ul {
     display: flex;
-    gap: 40px;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
+    gap: 20px;
 
-    .footer__content-item {
-      h4 {
-        text-align: left;
-        margin-bottom: 1rem;
-      }
+    li:hover {
+      transition: $transition;
+    }
+  }
 
-      ul {
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
+  &:last-of-type {
+    width: 40%;
+    margin-top: 3rem;
 
-        li:hover {
-          transition: var(--transition);
-        }
-      }
+    h4 {
+      margin-bottom: -2.2rem;
+      margin-left: 3rem;
     }
 
-    .footer__content-item:last-of-type {
-      width: 40%;
-      margin-top: 3rem;
-
-      h4 {
-        margin-bottom: -2.2rem;
-        margin-left: 3rem;
-      }
-
-      p {
-        text-align: left;
-      }
+    p {
+      text-align: left;
     }
+  }
+}
 
-    .footer__content-socials {
-      display: flex;
-      justify-content: center;
+.footer__content-socials {
+  display: flex;
+  justify-content: center;
 
-      i {
-        font-size: 1.6rem;
-        margin-left: 1rem;
-        margin-bottom: 3rem;
+  i {
+    font-size: 1.6rem;
+    margin-left: 1rem;
+    margin-bottom: 3rem;
 
-        &:hover {
-          transform: scale(1.1);
-          transition: var(--transition);
-        }
-      }
+    &:hover {
+      transform: scale(1.1);
+      transition: $transition;
     }
   }
 }
@@ -376,17 +458,15 @@ footer {
 
   .card {
     width: 30rem;
-  }
 
-  p {
-    width: 90%;
+    p {
+      width: 90%;
+    }
   }
 
   .footer__content {
     display: grid;
-    grid-template-areas:
-      "item1 item2"
-      "item3 item3";
+    grid-template-areas: "item1 item2" "item3 item3";
     margin-top: 3rem;
     margin-left: calc(50% - 25%);
   }
@@ -400,8 +480,7 @@ footer {
 }
 
 @media (width < 462px) {
-  header .logo,
-  footer .logo {
+  header .logo, footer .logo {
     width: 8rem;
   }
 
@@ -414,12 +493,14 @@ footer {
     height: 45vh;
   }
 
-  .hero__section-content img {
-    height: 4rem;
-  }
+  .hero__section-content {
+    img {
+      height: 4rem;
+    }
 
-  .hero__section-content p {
-    width: 80%;
+    p {
+      width: 80%;
+    }
   }
 
   .card__section {
@@ -429,19 +510,25 @@ footer {
   .card {
     width: 17rem;
     height: 28rem;
+
+    p {
+      width: 95%;
+      font-size: 0.8rem;
+    }
+
+    button {
+      font-size: 0.8rem;
+    }
   }
 
-  p {
-    width: 95%;
-  }
-
-  p,
-  button,
-  .text__section p,
-  .hero__section-content p,
-  footer p,
-  footer a {
+  .text__section p, .hero__section-content p {
     font-size: 0.8rem;
+  }
+
+  footer {
+    p, a {
+      font-size: 0.8rem;
+    }
   }
 
   .mobile-nav a {
