--- a/templates/about.html
+++ b/templates/about.html
@@ -30,7 +30,7 @@
       <a href="./contact.html">Contacto</a>
     </nav>
 
-    <section class="p-20 bg-gray-300 grid gap-8">
+    <section class="about__section">
       <p>
         Nuestra empresa surge del apasionado encuentro
         entre la innovación tecnológica y el compromiso con la preservación del
