--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,6 +1,7 @@
 @import "./variables.scss";
 @import "./about.scss";
 @import "./contact.scss";
+@import "./slider.scss";
 
 @font-face {
   font-family: "Montserrat-italic";
