--- a/templates/about.html
+++ b/templates/about.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-   
 
     <link rel="stylesheet" href="../css/index.css" />
   </head>
@@ -32,18 +31,16 @@
 
     <section class="about__section">
       <p>
-        Nuestra empresa surge del apasionado encuentro
-        entre la innovación tecnológica y el compromiso con la preservación del
-        entorno natural. Nos dedicamos a fusionar la vanguardia tecnológica con
-        la conciencia ecológica para desarrollar soluciones que impulsen el
-        cuidado de nuestro planeta. Guiados por la convicción de que la
-        tecnología puede ser una aliada poderosa en la protección del medio
-        ambiente, nos esforzamos por crear productos y servicios que no solo
-        revolucionen la industria, sino que también fomenten la sostenibilidad y
-        la armonía con la naturaleza. 
+        Nuestra empresa surge del apasionado encuentro entre la innovación
+        tecnológica y el compromiso con la preservación del entorno natural. Nos
+        dedicamos a fusionar la vanguardia tecnológica con la conciencia
+        ecológica para desarrollar soluciones que impulsen el cuidado de nuestro
+        planeta. Guiados por la convicción de que la tecnología puede ser una
+        aliada poderosa en la protección del medio ambiente, nos esforzamos por
+        crear productos y servicios que no solo revolucionen la industria, sino
+        que también fomenten la sostenibilidad y la armonía con la naturaleza.
       </p>
       <div class="frame__container">
-
         <img
           class="about__image-computer"
           src="../assets/img/about-computer.jpg"
@@ -55,7 +52,6 @@
         Nuestro compromiso con la excelencia nos impulsa a buscar constantemente
         la innovación. Colaboramos con reconocidos expertos en tecnología y
         medio ambiente para desarrollar soluciones que marcan la diferencia.
-        
         Desde sistemas de monitoreo ambiental hasta algoritmos inteligentes para
         optimizar recursos, nuestro enfoque es claro: crear un impacto positivo
         a través de la tecnología. La esencia de nuestra empresa radica en el
@@ -64,7 +60,6 @@
         nuestras actividades, siempre manteniendo un profundo respeto por el
         entorno que nos rodea. Nos enorgullecemos de nuestra participación
         activa en proyectos que buscan mitigar el cambio climático y preservar
-        
         la biodiversidad. Nuestro compromiso con la responsabilidad ambiental
         nos impulsa a colaborar con comunidades locales, gobiernos y
         organizaciones internacionales para implementar soluciones sostenibles y
@@ -72,17 +67,25 @@
         conciencia y responsabilidad, puede ser una fuerza transformadora para
         un futuro más próspero y equitativo. Seguimos trabajando incansablemente
         para lograr un mundo donde la tecnología y la naturaleza converjan en
-        armonía para el beneficio de todos 
+        armonía para el beneficio de todos
       </p>
       <div class="square__container">
-
         <img
-        class="about__image-enterpreneur"
-        src="../assets/img/girl-476977_1920.jpg"
-        alt=""
-      />
+          class="about__image-enterpreneur"
+          src="../assets/img/girl-476977_1920.jpg"
+          alt=""
+        />
       </div>
-     
+    </section>
+    <section>
+      <section class="slider">
+        <article class="slider-inner" id="slider-inner">
+          <img src="../assets/img-slider/slider1.jpg" />
+          <img src="../assets/img-slider/slider2.jpg" />
+          <img src="../assets/img-slider/slider3.jpg" />
+          <img src="../assets/img-slider/slider4.jpg" />
+        </article>
+      </section>
     </section>
 
     <footer>
@@ -133,7 +136,10 @@
       <p>&copy; 2024 | Todos los derechos reservados</p>
     </footer>
 
-    <script src="https://kit.fontawesome.com/c3db1c8a5f.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/c3db1c8a5f.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="../js/index.js" type="module"></script>
   </body>
 </html>
