--- a/scss/slider.scss
+++ b/scss/slider.scss
@@ -1,3 +1,8 @@
+section:has(.slider) {
+    background: #e3e6fc;
+    margin-top: -5rem;
+    margin-bottom: -10rem;
+}
 .slider {
     width: 50%;
     height: auto;
@@ -19,4 +24,20 @@
       height: 100%;
     }
   }
+
+  @media (width < 500px) {
+    .slider {
+      width: 90%;
+    }
+}
+
+@media (width < 1030px) {
+    .slider {
+      width: 80%;
+    }
+    section:has(.slider) {
+      margin-bottom: -40rem;
+    }
+
+}
   
