Modificada altura text-section

--- a/css/index.css
+++ b/css/index.css
@@ -602,8 +602,7 @@ a:hover {
     display: none;
   }
 }
-section:not(.text__section):not(.hero__section-contact),
-section:not(:has(.slider)) {
+section:not(.text__section):not(.hero__section-contact) {
   min-height: 100vh;
 }
 
